03 Jan 2004 mipsator
 * fixed get_make_var() by replacing misused mkstemp() by tmps_open().
 * simplified mkstemps() to remove warnings about the cast.
 * improved a bit comp_test.c to display more info.
 * fixed compiler detection failure.
 * fixed makefiles for HPUX.
 * fixed pmkcomp.dat to use unique id for each compiler definition.
 * fixed use of int64_t on the Tru64 platform.

# snapshot 0.7.9

02 Jan 2004 xsa
 * added PC_PATH_LIB to pmk.conf (look if PREFIX/lib/pkgconfig exists).
 * updated pmk.conf.5 accordinally.

02 Jan 2004 mipsator
 * added diverting from CHECK_PKG_CONFIG to CHECK_CONFIG.
 * added data file for specific config tool options.
 * added support for specific config tool options (huge).
 * finalized pkgconfig support.

01 Jan 2004 mipsator
 * added pkg_cell_add() and pkg_mod_exists() in pkgconfig.
 * rewritten pkg_recurse() to use pkg_cell_add().
 * updated test/pkgconfig_test.c in sync pkgconfig support changes.
 * wished happy new year :)
 * introduced internal pkgconfig support in CHECK_PKG_CONFIG.

31 Dec 2003 mipsator
 * added str_to_dynary_adv() to handle numerous separators.
 * changed str_to_dynary() to reuse str_to_dynary_adv() code.
 * rewritten and cleaned pkgconfig stuff.
 * updated pkgconfig_test.c to sync with changes.
 * added pkgcell_init().
 * added pkg_single_append() to avoid duplicates.
 * implemented pkg_get_cflags() and pkg_get_libs().
 * misc changes in pkgconfig_test.

30 Dec 2003 mipsator
 * imported some code for internal support of pkgconfig.
 * added pkgconfig_test.c in tests.
 * added variable substitution in pkgconfig support.
 * added pkg_recurse() in pkgconfig to prepare for recursion.

29 Dec 2003 mipsator
 * moved hash_add() as hash_update() and kept hash_add() as an alias.
 * updated hash_init_adv() to support data duplication.
 * updated hash_init() in sync with hash_init_adv().
 * added hash_update_dup() to automatically duplicate given data.
 * updated use of hash_add() in favor of hash_update() and