@@ -1,3 +1,7 @@
+05 Jan 2004 mipsator
+ * improved check_mode() in pmkinstall.c, patch provided by
+						Pedro Martelletto.
+
 03 Jan 2004 mipsator
  * fixed get_make_var() by replacing misused mkstemp() by tmps_open().
  * simplified mkstemps() to remove warnings about the cast.
